implemented settings for ending daydream on click on clock and displaying notifications. show notification access menu if requesting to show notificatoins

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Dreamy</string>
     <string name="daydream_name">Dreamy</string>
     <string name="unlock_on_time_click">Bei Tippen auf die Uhrzeit aufwecken</string>
+    <string name="displayNotifications">Benachrichtigungen anzeigen</string>
+    <string name="requestNotificationAccessMsg">Zugriff auf Benachrichtigungen muss gewährt werden</string>
 </resources>
