--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="displayBatteryStatus">Zeige Akkustand</string>
     <string name="displayWifiStatus">Zeige WLAN Status</string>
     <string name="displayCarrierName">Anbieternamen anzeigen</string>
+    <string name="notificatoinsVisibility">Sichtbarkeit der Benachrichtigungen</string>
 </resources>
