changed favicon, added screen brightness setting, began with styling of settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="displayWifiStatus">Zeige WLAN Status</string>
     <string name="displayCarrierName">Anbieternamen anzeigen</string>
     <string name="notificatoinsVisibility">Sichtbarkeit der Benachrichtigungen</string>
+    <string name="screen_brightness">Bildschirmhelligkeit</string>
 </resources>
