Added setting to restrict daydream to a usb connection type (charger or pc)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="displayCarrierName">Anbieternamen anzeigen</string>
     <string name="notificatoinsVisibility">Sichtbarkeit der Benachrichtigungen</string>
     <string name="screen_brightness">Bildschirmhelligkeit</string>
+    <string name="connectionType">Starten bei Verbindung mit</string>
+    <string name="connectionTypeCharger">Ladegerät</string>
+    <string name="connectionTypePC">PC (USB)</string>
+    <string name="connectionTypeBoth">Beide</string>
 </resources>
