--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Dreamy</string>
     <string name="daydream_name">Dreamy</string>
+    <string name="dreamy_settings">Dreamy Einstellungen</string>
     <string name="unlock_on_time_click">Bei Tippen auf die Uhrzeit aufwecken</string>
     <string name="displayNotifications">Benachrichtigungen anzeigen</string>
     <string name="requestNotificationAccessMsg">Zugriff auf Benachrichtigungen muss gewährt werden</string>
@@ -14,4 +15,8 @@
     <string name="connectionTypePC">PC (USB)</string>
     <string name="connectionTypeAlways">Immer</string>
     <string name="percent">%d%%</string>
+    <string name="daydream_disabled">Daydream ist nicht aktiv. Um Dreamy zu verwenden, muss Daydream aktiviert und Dreamy ausgewählt werden.</string>
+    <string name="daydream_not_selected">Dreamy ist nicht als Daydream-App ausgewählt. Das kannst du in den Einstellungen ändern.</string>
+    <string name="go_to_daydream_settings">Daydream-Einstellungen öffnen</string>
+    <string name="i_dont_care">Mir doch egal</string>
 </resources>
