app selection list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,9 +14,11 @@
     <string name="connectionTypeCharger">Ladegerät</string>
     <string name="connectionTypePC">PC (USB)</string>
     <string name="connectionTypeAlways">Immer</string>
+    <string name="app_selection">Apps ausschließen</string>
     <string name="percent">%d%%</string>
     <string name="daydream_disabled">Daydream ist nicht aktiv. Um Dreamy zu verwenden, muss Daydream aktiviert und Dreamy ausgewählt werden.</string>
     <string name="daydream_not_selected">Dreamy ist nicht als Daydream-App ausgewählt. Das kannst du in den Einstellungen ändern.</string>
     <string name="go_to_daydream_settings">Daydream-Einstellungen öffnen</string>
     <string name="i_dont_care">Mir doch egal</string>
+    <string name="description_app_icon">App icon</string>
 </resources>
