changed layout of settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,7 @@
     <string name="showNameOfTheApp">Name der App</string>
     <string name="showTitle">Titel</string>
     <string name="start_daydream">Daydream starten</string>
+    <string name="general">Allgemeines</string>
+    <string name="notifications">Benachrichtigungen</string>
+    <string name="devide_status">Gerätestatus</string>
 </resources>
