--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="background_color">Hintergrundfarbe</string>
     <string name="font_color">Schriftfarbe</string>
     <string name="choose_color">Farbe auswählen</string>
+    <string name="general_daydream_settings">Allgemeine Daydream Einstellungen</string>
 </resources>
